# OLCPGEMobile_AndroidStudio

./: README.md  build.gradle  gradle.properties  local.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  GLError.cpp  GLError.h  android_native_app_glue.h  main.cpp  miniaudio.h  olcPGEX_MiniAudio.h  olcPixelGameEngine_Mobile.h  pch.h  sse2neon.h  stb_image.h
app/src/main/java/com/example/OLCPGEMobileAndroidStudio/: OLCPGEMobileAndroidStudio.java  OLCPGEMobileAndroidStudio_Dev.java
app/src/main/java/com/example/OLCPGEMobileAndroidStudio_Dev/: OLCPGEMobileAndroidStudio_Dev.java
app/src/main/java/com/example/olcastemplate/: olcastemplate.java
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
gradle/wrapper/: gradle-wrapper.properties
